# jupyter-book-example

./: .buildinfo  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy-jupyter-book.yml
_sources/jupyter/: index.ipynb
docs/: _config.yml  _toc.yml  index.md
docs/jupyter/: example.ipynb
docs/markdown/: example.md  index.md
jupyter/: example.html  index.html
markdown/: example.html  index.html
